--- a/ShopeeClone/index.html
+++ b/ShopeeClone/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopee Clone</title>
+    <meta name="description" content="Đây là dự án Shopee Clone" data-rh="true" />
   </head>
   <body>
     <div id="root"></div>
